<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:scrollbarSize="5dp"
        android:scrollbarStyle="insideInset"
        android:overScrollMode="ifContentScrolls">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="About APP"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appInfoHelp"
                android:textColor="#433303"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Features and Instructions"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appFeatures"
                android:textColor="#433303"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/finalRegardsHelp"
                android:textColor="#433303"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Okay"
                android:id="@+id/btnHelpOkay"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>